--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head> Kelly's visit to Singapore </head>
 <body>
 <p> team pic <br>
-<img src="image1.jpeg" alt="SG Core Team" width=300 height=200>
-<img src="image2.jpeg" alt="SG UnixMW Team" width=300 height=200>
+--<img src="image1.jpeg" alt="SG Core Team" width=300 height=200>
+--<img src="image2.jpeg" alt="SG UnixMW Team" width=300 height=200>
 <img src="image3.jpeg" alt="SG SAP Basis" width=300 height=200>
 <img src="https://s3-us-west-1.amazonaws.com/aws-demo-lab-images/Image4.jpeg" alt="All Pretty Ladies" width=300 height=200>
 </p>
